bynkc/tests/fixtures/negative/252_held_branch_divergence/src/room.bynk
context room
type ServerFrame = { text: String }
capability Gateway { fn accept() -> Effect[Connection[ServerFrame]] }
service Chat from http {
  on GET("/x/:m") by v: Visitor (m: String) -> Effect[HttpResult[()]] given Gateway {
    let conn <- Gateway.accept()
    let _ <- if m == "a" { conn.close() } else { conn.send(ServerFrame { text: "keep" }) }
    NoContent
  }
}
